--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,70 @@
--i https://pypi.mirrors.ustc.edu.cn/simple/
+appnope==0.1.2
 attrs==20.3.0
 Automat==20.2.0
+backcall==0.2.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 constantly==15.1.0
 cryptography==3.4.7
 cssselect==1.1.0
+cycler==0.10.0
+DateTime==4.3
+decorator==5.0.9
 fonttools==4.22.0
 h2==3.2.0
+happybase==1.2.0
 hpack==3.0.0
 hyperframe==5.2.0
 hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
+ipython==7.27.0
 itemadapter==0.2.0
 itemloaders==1.0.4
+jedi==0.18.0
 jmespath==0.10.0
+joblib==1.0.1
+kiwisolver==1.3.2
+lightgbm==3.2.1
 lxml==4.6.3
+matplotlib==3.4.3
+matplotlib-inline==0.1.2
+numpy==1.21.2
+pandas==1.3.2
 parsel==1.6.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+ply==3.11
 priority==1.3.0
+prompt-toolkit==3.0.20
 Protego==0.1.16
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyDispatcher==2.0.5
+Pygments==2.10.0
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.1
 queuelib==1.6.1
 requests==2.25.1
+scikit-learn==0.24.2
+scipy==1.7.1
 Scrapy==2.5.0
+seaborn==0.11.2
 service-identity==18.1.0
-six==1.15.0
+six==1.16.0
+threadpoolctl==2.2.0
+thriftpy2==0.4.14
+traitlets==5.1.0
 Twisted==21.2.0
 urllib3==1.25.8
 w3lib==1.22.0
+wcwidth==0.2.5
+xgboost==1.4.2
 zope.interface==5.4.0
-happybase==1.2.0
